It is always a typo :/

--- a/erlang_ls/erlang_ls.config
+++ b/erlang_ls/erlang_ls.config
@@ -2,7 +2,7 @@ include_dirs:
     - "include"
     - "_build/default/lib/*/include"
     - "_checkouts/*/include"
-deeps_dirs:
+deps_dirs:
     - "_build/default/lib/*"
     - "_checkouts/*"
 apps_dirs:
