Disable compiler diagnostics for erlang_ls

--- a/erlang_ls/erlang_ls.config
+++ b/erlang_ls/erlang_ls.config
@@ -11,3 +11,8 @@ providers:
     disabled:
         - document-formatting
         - document-range-formatting
+diagnostics:
+    disabled:
+        - compiler
+    enabled:
+        - crossref
