--- a/erlang_ls/erlang_ls.config
+++ b/erlang_ls/erlang_ls.config
@@ -1,12 +1,9 @@
-include_dirs:
-    - "include"
-    - "_build/default/lib/*/include"
-    - "_checkouts/*/include"
-deps_dirs:
-    - "_build/default/lib/*"
-    - "_checkouts/*"
 apps_dirs:
     - "_build/default/lib/*"
+include_dirs:
+    - "_build/default/lib/*include"
+    - "_build/default/lib"
+    - "include"
 providers:
     disabled:
         - document-formatting
