--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,4 +1,5 @@
 set-option -ga terminal-overrides ',xterm-256color:clipboard'
+set -g set-clipboard on
 
 # Balance panes horizontally (equal height)
 bind = select-layout even-horizontal
