--- a/erlang_ls/erlang_ls.config
+++ b/erlang_ls/erlang_ls.config
@@ -10,5 +10,5 @@ providers:
         - document-range-formatting
 diagnostics:
     enabled:
-        - crossref
         - compiler
+        - dialyzer
