--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -10,8 +10,14 @@ bind + select-layout even-vertical
 # Tiled layout (best fit)
 bind | select-layout tiled
 
-# Kill current pane
-bind p command-prompt -p "Kill this pane? (y/n)" "if-shell '[ \"%%\" = \"y\" ]' 'kill-pane'"
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
 
+bind u confirm-before -p "Kill session #S? (y/n)" kill-session
+
+# Kill current pane
+bind y confirm-before -p "Kill this pane #S? (y/n)" kill-pane
 
 
