Quality of life

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -18,6 +18,6 @@ bind l select-pane -R
 bind u confirm-before -p "Kill session #S? (y/n)" kill-session
 
 # Kill current pane
-bind y confirm-before -p "Kill this pane #S? (y/n)" kill-pane
+bind U confirm-before -p "Kill this pane #S? (y/n)" kill-pane
 
 
